More boxes picture fix
Making sure the pictures don't repeat and cover the box

--- a/University/Admin assets/CSS/build-uhi-main-2.css
+++ b/University/Admin assets/CSS/build-uhi-main-2.css
@@ -745,6 +745,8 @@ main .more-boxes.flexwrap div div,
 main .news-boxes .flexwrap div div {
     background: var(--uhi-grey1);
     height: 350px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 main .blocks.flexwrap {
